Commented the snacks page on index, because we still don't have snacks

--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
                     <span data-i18n-key="coffee">Coffee</span>
                 </a>
             </li>
-            <li>
-                <a href="snacks.html">
-                    <span class="icon">🍟</span>
-                    <span data-i18n-key="snacks">Snacks</span>
-                </a>
-            </li>
+<!--            <li>-->
+<!--                <a href="snacks.html">-->
+<!--                    <span class="icon">🍟</span>-->
+<!--                    <span data-i18n-key="snacks">Snacks</span>-->
+<!--                </a>-->
+<!--            </li>-->
         </ul>
     </nav>
 </main>
