Fixed the i18n of the page.

--- a/beer.html
+++ b/beer.html
@@ -76,7 +76,7 @@
               data-desc="All the men knows why."
               data-price="BGN 3.00"
       >
-        <span class="item-name">Kamenitza</span>
+        <span data-i18n-key="kamenitza" class="item-name">Kamenitza</span>
         <span class="price">BGN 3.00</span>
       </div>
       <div
@@ -86,7 +86,7 @@
               data-desc="Don't worry the sea is here."
               data-price="BGN 3.00"
       >
-        <span class="item-name">Burgasko</span>
+        <span data-i18n-key="burgasko" class="item-name">Burgasko</span>
         <span class="price">BGN 3.00</span>
       </div>
     </div>
