Fixed the i18n of the page.

--- a/coffee.html
+++ b/coffee.html
@@ -17,7 +17,8 @@
 </div>
 <header>
     <button id="langToggle" class="toggle-btn" aria-label="Toggle language">EN</button>
-    <h1>☕ Coffee & Tea</h1>
+    <h1>☕</h1>
+    <h1 data-i18n-key="coffeeAndTea">☕ Coffee & Tea</h1>
     <button id="themeToggle" class="toggle-btn" aria-label="Toggle theme">🌞</button>
 </header>
 
